[package]
name = "cdk-payment-processor-spark"
version = "0.0.1"
edition = "2021"
authors = ["thesimplekid <tsk@thesimplekid.com>"]
description = "CDK Payment Processor using Breez SDK Spark"
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
cdk-common = { version = "0.15.0-rc.2", default-features = false, features = ["mint"] }
cdk-payment-processor = { version = "0.15.0-rc.2", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
figment = { version = "0.10", features = ["env", "toml"] }
futures-core = "0.3.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal", "test-util"] }
tokio-stream = "0.1"
tonic = { version = "0.14", features = ["transport"] }
tonic-reflection = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
breez-sdk-spark = { git = "https://github.com/breez/spark-sdk", tag = "0.3.2" }
hex = "0.4"
home = "0.5.12"
lightning-invoice = "0.33.2"
redb = "3.1.0"

[build-dependencies]
tonic-build = "0.12"

[features]
default = []
